--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <a href="./lv1/nine-nine.html">
-        LV.1  Nine-Nine Multiplication Table</a>
+        LV.1  Nine-Nine Multiplication Table
+    </a>
+    <a href="./lv2/clock.html">
+        LV.2  clock
+    </a>
 </body>
 </html>
