--- a/lv2/clock.html
+++ b/lv2/clock.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>新手地下城，第二關</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     
