--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         LV.2  clock
     </a>
     <br>
-    <a href="">
-        LV.3  clock
+    <a href="./lv3/calculator.html">
+        LV.3  caculator
     </a>
     <br>
     <a href="">
