--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         LV.3  caculator
     </a>
     <br>
-    <a href="">
-        LV.4  clock
+    <a href="./lv4/timezone.html">
+        LV.4  TimeZone
     </a>
     <br>
     <a href="">
