--- a/lv2/clock.html
+++ b/lv2/clock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新手地下城，第二關</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -26,11 +26,10 @@
 
     <script>
     var timer = setInterval(function(){
-        var time = new Date(),
-            timeStr=new Date().toLocaleString('zh-TW', {timeZone: 'Asia/Taipei'});
+        var time = new Date();
         var nowsec=time.getSeconds(),
             nowmin = time.getMinutes(),
-            nowhour =timeStr.slice(12,14);
+            nowhour = time.getHours();
         var secdeg=180+nowsec*6,
             mindeg=nowmin*6,
             hourdeg=-90+nowhour*30+(nowmin/12)*6;
