--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         LV.5  airpollution board
     </a>
     <br>
-    <a href="">
-        LV.6  clock
+    <a href="./lv6/calculatorGame.html">
+        LV.6  Calculator Game
     </a>
     <br>
     <a href="">
