--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         LV.6  Calculator Game
     </a>
     <br>
-    <a href="">
-        LV.7  clock
+    <a href="./lv7/tablet.html">
+        LV.7  drawing tablet
     </a>
     <br>
     <a href="">
