--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         LV.7  drawing tablet
     </a>
     <br>
-    <a href="">
-        LV.8  clock
+    <a href="./lv8/tictactoe.html">
+        LV.8  TicTacToe
     </a>
     <br>
     <a href="">
