--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     </a>
     <br>
     <a href="./lv2/clock.html">
-        LV.2  clock
+        LV.2  Clock
     </a>
     <br>
     <a href="./lv3/calculator.html">
-        LV.3  caculator
+        LV.3  Caculator
     </a>
     <br>
     <a href="./lv4/timezone.html">
@@ -23,7 +23,7 @@
     </a>
     <br>
     <a href="./lv5/air.html">
-        LV.5  airpollution board
+        LV.5  Airpollution Board
     </a>
     <br>
     <a href="./lv6/calculatorGame.html">
@@ -31,15 +31,15 @@
     </a>
     <br>
     <a href="./lv7/tablet.html">
-        LV.7  drawing tablet
+        LV.7  Drawing Tablet
     </a>
     <br>
     <a href="./lv8/tictactoe.html">
         LV.8  TicTacToe
     </a>
     <br>
-    <a href="">
-        LV.9  clock
+    <a href="./lv9/turntable.html">
+        LV.9  Turntable
     </a>
     <br>
     <a href="">
