--- a/lv6/calculatorGame.html
+++ b/lv6/calculatorGame.html
@@ -128,6 +128,7 @@
                         }
                     },
                     handleCheckAns: function () {
+                        this.userAns = formatFloat(this.userAns, 1);
                         if (this.time <= 40) {
                             if (this.userAns == this.correctAns) this.score += 1;
                             else if (this.userAns != this.correctAns && this.score > 0) this.score -= 1;
